# revisao-sistematica-com-agentes

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_integration.py
src/screening/: __init__.py  graph.py  llm.py  main.py  models.py  prompts.py  spreadsheet.py
src/screening/api/: server.py
src/screening/api/routes/: screening.py
src/screening/ui/: __init__.py  router.py
src/screening/ui/templates/: base.html  index.html
