[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/screening"]

[project]
name = "revisao-sistematica-com-agentes"
version = "1.1.3"
description = "AI-powered screening agent for systematic review triage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph==1.0.8",
    "langchain==1.2.7",
    "langgraph-prebuilt==1.0.7",
    "langchain-google-genai>=2.1",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.2.1",
    "langchain-anthropic==1.4.1",
    "langchain-deepseek==1.0.1",
    "xlrd>=2.0",
    "openpyxl>=3.1",
    "python-dotenv>=1.1",
    "pydantic>=2.0",
    "pandas>=2.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "python-multipart>=0.0.26",
    "jinja2>=3.1.6",
]

[project.scripts]
screening-api = "screening.api.server:main"
